# LHub-backend

./: .env  README.md  alembic.ini  pyproject.toml  sqlqueries.sql  test_webhook_stripe.py
app/: main.py
app/api/v1/: routers.py
app/api/v1/endpoints/: __init__.py  account.py  auth.py  cart.py  orders.py  products.py  shipping.py  stores.py  tracking.py
app/api/v1/endpoints/gateways/: stripe.py
app/core/: __init__.py  config.py  security.py
app/db/: session.py
app/models/: __init__.py  account.py  cart.py  order.py  product.py  shipping.py  store.py
app/schemas/: __init__.py  account.py  cart.py  order.py  product.py  shipping.py  store.py  tracking.py
app/schemas/gateways/: stripe.py
app/services/: __init__.py  inventory.py  payment.py  shipping.py
app/services/gateways/: stripe.py
app/utils/: __init__.py  exceptions.py
migrations/: env.py
migrations/versions/: 22d773ff724f_corrige_coluna_cep.py  dbd3e1e8ef15_adiciona_coluna_cep.py
